added tests (integration and unit)